# vscode-remote-try-python

./: requirements.txt
.devcontainer/: devcontainer.json
codespace_sandbox/: LICENSE  Makefile  README.md  pyproject.toml
codespace_sandbox/codespace_sandbox/: __init__.py  dataset.py  features.py  plots.py
codespace_sandbox/codespace_sandbox/modeling/: predict.py  train.py
codespace_sandbox/docs/: mkdocs.yml
codespace_sandbox/docs/docs/: index.md
codespace_sandbox/tests/: test_data.py
static/: index.html  style.css
