[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "codespace_sandbox"
version = "0.0.1"
description = "Quick exploration of codespaces"
authors = [
  { name = "Alex R" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["codespace_sandbox"]
include = ["pyproject.toml", "codespace_sandbox/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["codespace_sandbox"]
force-sort-within-sections = true

